* Fixed bug with verifying maps
* Added handling of vararg methods

----------------------
- Version 0.3.2
----------------------
* Added default behaviour of returning collection objects (Iterable, List, Set, Map) when possible.
  For the same method parameters, the same object will be returned.
* Moved all stub* methods to Mockachino from MockContext.
* Fixed bug where equals failed when using different number types.

----------------------
- Version 0.3.1
----------------------
* Changed behaviour of deep mock handler to remember arguments
* Added detection of incorrect verification usage on the form: verify().on(mock).foo().bar(); instead of verify().on(mock.foo()).bar();


----------------------
- Version 0.3.0
----------------------

* Mocking now works on classes that has atleast one non-private constructor that doesn't throw an exception
* Added support for @Mock and @Spy annotations
* Included optional support for Objenesis, which means support for mocking concrete classes without calling constructors

----------------------
- Version 0.2.0
----------------------
* Added support for stubbing / verifying: equals, hashCode, toString
* Implemented a default answer for deep mocks
* Added MockPoint and between-operator.
* Implemented quick mocks (does not store stacktrace)
* Added mock settings
* Added support for mocking multiple interfaces on the same mock
* eq-matcher now supports comparing arrays by value (including nested arrays)
----------------------
- Version 0.1.0
----------------------
First release.
