@@ -1,5 +1,6 @@
 * Fixed bug with verifying maps
 * Added handling of vararg methods
+* Fixed bug with using mocks with protected methods
 
 ----------------------
 - Version 0.3.2
